<resources>
  <string name="app_name">Furgoncito</string>
  <string name="confirm_remove_request">"¿Esta seguro que desea eliminar la solicitud de amistad?"</string>
  <string name="btn_verificar_persona">Verificar</string>
  <string name="error_correo">Ingresa un correo electronico válido</string>
  <string name="error_correo_verdadero">Ingresa un correo electronico propio de google, existente y en uso en el actual dispositivo movil</string>
  <string name="error_fechaNac">Ingresa una fecha de nacimiento válido</string>
  <string name="error_fechaNacEdad">Debe ser mayor de edad para registrarse</string>
  <string name="error_firstName">Ingresa un primer nombre válido</string>
  <string name="contrase_a">Contraseña</string>
  <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
  <string name="apodo">Apodo</string>
  <string name="correo_electronico">Correo electronico</string>
  <string name="conductor">Conductor de furgon</string>
  <string name="apoderado">Apoderado</string>
  <string name="conversacion">Conversación</string>
  <string name="todo">TODO</string>
  <string name="info_cedula">Paso 2:Toma una foto de la cedula de identidad</string>
  <string name="info_photo_current">Paso 1: Toma una foto actual de frente</string>
  <string name="info_intro">Introduccion: Para asegurarnos de que el usuario es veridico, necesita los siguientes pasos</string>
  <string name="info_licencia_conducir">Paso 2:Toma una foto de la licencia de conductor de furgon escolar</string>
  <string name="err_password_confirmation">Confirma una contraseña válida</string>
  <string name="title">Title</string>
  <string name="error_password">Ingresa una contraseña mayor o igual a 8 caracteres</string>
  <string name="limpiar">Limpiar</string>
  <string name="entrar">Entrar</string>
  <string name="progreso_descarga">0 / 0</string>
  <string name="carpeta_de_descarga">Carpeta de descarga</string>
  <string name="btn_terminar">Listo</string>
  <string name="escribe_un_nombre_de_usuario">Escribe un nombre de usuario</string>
  <string name="nueva_contrase_a">Nueva contraseña</string>
  <string name="guardar">Aceptar</string>
  <string name="antigua_contrase_a">Antigua contraseña</string>
  <string name="error_caja_old_password_length">La antigua contraseña permite mínimo 5 caracteres</string>
  <string name="error_old_password_invalid">Antigua contraseña invalida</string>
  <string name="error_folder_invalid">Carpeta de descarga invalida</string>
  <string name="error_caja_new_password_length">La nueva contraseña permite mínimo 5 caracteres</string>
  <string name="cambiar_contrase_a">Cambiar contraseña</string>
  <string name="modificar_punto_de_partida">Modificar punto de partida</string>
  <string name="eliminar_perfil">Eliminar perfil</string>
  <string name="desconocido">Desconocido</string>
  <string name="registrar_como_cliente_de_mensajeria">Registrar como cliente de mensajeria</string>
  <string name="eliminar_cuenta_de_mensajeria">Eliminar cuenta de mensajeria</string>
  <string name="iniciar_cuenta_de_mensajer_a">Iniciar cuenta de mensajería</string>
  <string name="descarga_el_mapa_de_chile">Descargar el mapa de Chile</string>
  <string name="seleccionar_carpeta">Seleccionar carpeta</string>
  <string name="latitud">Latitud</string>
  <string name="nombre_de_usuario">Nombre de usuario</string>
  <string name="distancia">Distancia</string>
  <string name="punto_partida">Casa</string>
  <string name="destino">Colegio</string>
  <string name="elige_un_destino">Colegio</string>
  <string name="elige_un_punto_partida">Casa</string>
  <string name="elegir_al_contacto_que_llevo">Contacto a llevar</string>
  <string name="salir">Salir</string>
  <string name="utilizar_el_correo_de_mi_dispositivo">Utilizar correo de mi cuenta Google</string>
  <string name="x">X</string>
  <string name="route">Ruta</string>
  <string name="cancel">Cancel</string>
  <string name="step">Step</string>
  <string name="estoy_en_casa">Estoy en casa</string>
  <string name="estoy_en_el_colegio">Estoy en el colegio</string>
  <string name="trazar_ruta">Trazar ruta</string>
  <string name="centrar_en_el_lugar_del_ni_o">Centrar en casa</string>
  <string name="centrar_en_el_destino">Centrar en el colegio</string>
  <string name="solicitudes_enviadas">Solicitudes enviadas</string>
  <string name="perfil">Perfil</string>
  <string name="mensajer_a">Mensajería</string>
  <string name="navegaci_n">Navegación</string>
  <string name="conductor_de_furgon_escolar">Conductor de furgon escolar</string>
  <string name="closeDrawer">Navigación cerrada</string>
  <string name="openDrawer">Navigación abierta</string>
  <string name="amigos">Amigos</string>
  <string name="administrador_de_cuenta">Administrador de cuenta</string>
  <string name="inicio_sesion">Inicio sesión</string>
  <string name="modifica_password">Nueva contraseña</string>
  <string name="elige_lugar_mapa">Lugar del mapa</string>
  <string name="contactJid">Jid</string>
  <string name="casa"><b>Casa:</b></string>
  <string name="elegi_estar_en_casa"><b>Elegi estar en casa</b></string>
  <string name="elegi_estar_en_el_colegio"><b>Elegi estar en el colegio</b></string>
  <string name="estoy_en_desconocido"><b>Estoy en:</b> Desconocido</string>
  <string name="estoy_en"><b>Estoy en:</b> </string>
  <string name="colegio_desconocido"><b>Colegio:</b> Desconocido</string>
  <string name="colegio_dos_puntos"><b>Colegio:</b> </string>
  <string name="casa_desconocido"><b>Casa:</b> Desconocido</string>
  <string name="casa_dos_puntos"><b>Casa:</b> </string>
  <string name="nombre_usuario_desconocido"><b>Nombre de usuario:</b> Desconocido</string>
  <string name="nombre_usuario_dos_puntos"><b>Nombre de usuario:</b> </string>
  <string name="nombre_de_usuario_desconocido">Nombre de usuario: Desconocido</string>
  <string name="punto_partida_desconocido">Punto partida: Desconocido</string>
  <string name="destino_desconocido">Destino: Desconocido</string>
  <string name="lugar_desconocido">Lugar: Desconocido</string>
  <string name="comprar_registro">Comprar registro</string>
  <string name="aceptar">Aceptar</string>
  <string name="registro_apoderado">Registro apoderado</string>
  <string name="registro_conductor_furgon_escolar">Registro furgonero escolar</string>
  <!-- Application UI -->
  <string name="tab_text_home">Inicio</string>
  <string name="tab_text_premium">Premium</string>
  <string name="tab_text_settings">Configuración</string>
  <string name="sign_out">Salir</string>
  <string name="sign_in">Autenticar</string>
  <string name="no_basic_content">Cagando contenido básico</string>
  <string name="no_premium_content">Cargando contenido premium</string>
  <string name="refresh_menu_text">Actualizar</string>
  <!-- Minor subscription notices -->
  <string name="grace_period_message">Algo esta mal con tu subscripción, pero aún tiene acceso durante un período temporal. Toca para arreglarlo.</string>
  <string name="restore_message_with_date">Tu subscripción esta cancelada y expira en %1$s. Toca para restaurar tu subscripción.</string>
  <!-- Different account is using subscription -->
  <string name="transfer_message">Una cuenta diferente ya está utilizando su suscripción, pero puede transferir su suscripción a esta cuenta.</string>
  <string name="transfer_message_with_sku">Una cuenta diferente ya está utilizando su %1$s subscripción, pero puede transferir su suscripción a esta cuenta.</string>
  <string name="transfer_message_with_two_skus">Una cuenta diferente ya está utilizando sus %1$s y %2$s subscripciones, pero puede transferir sus suscripciones a esta cuenta.</string>
  <string name="transfer_button_text">Transferir</string>
  <!-- Account hold -->
  <string name="account_hold_message">Su cuenta está en espera porque hay un problema con su método de pago. Actualice su método de pago o agregue uno nuevo para restaurar su suscripción.</string>
  <string name="fix_button_text">Administrar métodos de pago</string>
  <!-- Active subscriptions -->
  <string name="premium_message">Tienes una suscripción Premium</string>
  <string name="basic_message">Tienes una suscripción básica</string>
  <string name="basic_content_text">Bienvenido al furgon clásico con clase, que conduce a través de la tranquilidad del dia.</string>
  <string name="premium_content_text">Bienvenido al furgon espacial premium, que vuela a través de las infinitas posibilidades del espacio.</string>
  <!-- Paywall -->
  <string name="paywall_message">Suscríbase a un plan premium</string>
  <string name="premium_paywall_message">Necesitas suscribirte a un plan Premium</string>
  <!-- Upgrade -->
  <string name="premium_upgrade_message">Actualmente tiene un plan básico. Actualice para disfrutar de los beneficios del plan Premium.</string>
  <string name="upgrade_button_text">Potenciar</string>
  <!-- Manage subscriptions -->
  <string name="manage_subscription_label">Administrar Suscripciones</string>
  <string name="manage_subscription_message">Administre su suscripción en Google Play.</string>
  <string name="google_play_subscriptions">Suscripciones de Google Play</string>
  <!-- Subscription options -->
  <string name="subscription_options_label">Opciones de suscripción</string>
  <string name="basic_button_text">Básico</string>
  <string name="premium_button_text">Premium</string>
  <string name="subscription_option_basic_message">Plan básico</string>
  <string name="subscription_option_basic_message_current">Plan básico (actual)</string>
  <string name="subscription_option_basic_message_account_hold">Plan básico (en espera)</string>
  <string name="subscription_option_basic_message_grace_period">Plan básico (problema de pago)</string>
  <string name="subscription_option_basic_message_restore">Plan básico (cancelado)</string>
  <string name="subscription_option_premium_message">Plan premium</string>
  <string name="subscription_option_premium_message_current">Plan premium (actual)</string>
  <string name="subscription_option_premium_message_account_hold">Plan premium (en espera)</string>
  <string name="subscription_option_premium_message_grace_period">Plan premium (problema de pago)</string>
  <string name="subscription_option_premium_message_restore">Plan premium (cancelado)</string>
  <string name="mi_app">App</string>
  <string name="registra_conductor">Registra conductor</string>
  <string name="registra_apoderado">Registra apoderado</string>
  <string name="inicia_sesion">Inicia sesión</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="crear_solicitud_amistad">Crear solicitud de amistad</string>
  <string name="enviar_solicitud_amistad">Enviar solicitud de amistad</string>
  <string name="letra_o">o</string>
  <string name="inicio">Inicio</string>
  <string name="registro">Registro</string>
  <string name="lista_amigos">Lista de amigos</string>
  <string name="compartir_mi_ubicacion">Compartir mi ubicación con amigos</string>
  <string name="denegar_ubicacion_demas">Denegar mi ubicación con amigos</string>
  <string name="desconectado">Desconectado</string>
  <string name="error_email_login">Error, correo debe ser igual al autenticado</string>
  <string name="autentica_pantalla_principal">Autentica desde la pantalla principal</string>
  <string name="updates">hola</string>
  <string name="eula">hola</string>
  <!-- Manage subscriptions guided step on Android TV -->
</resources>
