<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  tools:context=".PickerDirection">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ToggleButton
      android:id="@+id/btn_toggle_lugar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/toolbar"
      android:padding="@dimen/medium"
      android:background="@color/miPurpura"
      android:textColor="@color/blanco"
      android:textOff="@string/elige_un_destino"
      android:textOn="@string/elige_un_punto_partida" />
    <LinearLayout
      android:id="@+id/layout_campos"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:padding="@dimen/medium"
      android:background="@color/azulVerdoso"
      android:orientation="vertical">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/tv_casa_colegio"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/medium"
          android:layout_gravity="center_vertical"
          android:text="@string/casa"
          android:textColor="@color/blanco" />
        <EditText
          android:id="@+id/etDestino"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/small"
          android:background="@drawable/button_background_blanco"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:hint="@string/destino"
          android:importantForAutofill="no"
          android:inputType="none"
          android:textSize="@dimen/txt_size"
          android:visibility="gone" />
        <EditText
          android:id="@+id/etPuntoPartida"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/small"
          android:background="@drawable/button_background_blanco"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:hint="@string/punto_partida"
          android:importantForAutofill="no"
          android:inputType="none"
          android:textSize="@dimen/txt_size" />
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:orientation="horizontal">
        <TextView
          android:id="@+id/tv_seleccion_lugar"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/medium"
          android:layout_gravity="center_vertical"
          android:text="@string/elegi_estar_en_casa"
          android:textColor="@color/blanco" />
        <ToggleButton
          android:id="@+id/btn_mi_lugar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/medium"
          android:background="@drawable/button_background"
          android:textColor="@color/blanco"
          android:textOff="@string/estoy_en_el_colegio"
          android:textOn="@string/estoy_en_casa" />
      </LinearLayout>
      <Button
        android:id="@+id/btn_listo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_check"
        android:focusable="true"
        android:text="@string/guardar"
        android:textColor="@color/blanco" />
    </LinearLayout>
    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      android:theme="@style/ThemeOverlay.AppCompat.Dark"
      app:title="@string/app_name"
      app:titleTextColor="#FFF" />
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@id/layout_campos"
      android:layout_below="@id/btn_toggle_lugar">
      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/marker_red"
        app:backgroundTint="#00BCD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
      <org.osmdroid.views.MapView
        android:id="@+id/mi_mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </RelativeLayout>
</ScrollView>
