<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/azulVerdoso"
  android:orientation="vertical">
  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/medium"
    app:cardBackgroundColor="@color/miPurpura"
    app:cardCornerRadius="10dp"
    app:cardElevation="@dimen/cv_elevation">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/medium"
      android:orientation="horizontal">
      <Button
        android:id="@+id/btnEliminarAmigo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_background_yellow"
        android:text="@string/x"
        android:textColor="@color/negro" />
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/cv_img_profile"
        android:layout_toStartOf="@id/btnEliminarAmigo"
        android:orientation="vertical">
        <TextView
          android:id="@+id/tv_apodo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/medium"
          android:text="@string/apodo"
          android:textColor="@color/blanco" />
        <TextView
          android:id="@+id/contact_jid"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/medium"
          android:text="@string/contactJid"
          android:textColor="@color/blanco"
          android:visibility="gone" />
        <TextView
          android:id="@+id/tv_nombre_usuario"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/medium"
          android:text="@string/nombre_de_usuario"
          android:textColor="@color/blanco"
          android:visibility="visible" />
        <TextView
          android:id="@+id/tvDisponible"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/medium"
          android:text="@string/desconectado"
          android:textColor="@color/blanco" />
      </LinearLayout>
      <androidx.cardview.widget.CardView
        android:id="@+id/cv_img_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/medium"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="25dp" />
      <ImageView
        android:id="@+id/img_excla"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="@dimen/small"
        android:layout_marginStart="-22dp"
        android:layout_toEndOf="@id/cv_img_profile"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_exclamancion" />
    </RelativeLayout>
  </androidx.cardview.widget.CardView>
</RelativeLayout>
