<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  tools:context=".PantallaInicial">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/medium"
    android:background="@color/azulVerdoso">
    <LinearLayout
      android:id="@+id/layout_botonera"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/medium"
      android:layout_alignParentTop="true"
      android:padding="@dimen/medium"
      android:background="@drawable/button_background_blanco"
      android:orientation="vertical">
      <TextView
        android:id="@+id/tv_inicio_sesion"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/medium"
        android:text="@string/inicio"
        android:textColor="@color/negro" />
      <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:padding="@dimen/small"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_input"
        android:text="@string/inicia_sesion"
        android:textColor="@color/blanco" />
    </LinearLayout>
    <LinearLayout
      android:id="@+id/layout_registro"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/layout_botonera"
      android:padding="@dimen/medium"
      android:background="@drawable/button_background_blanco"
      android:orientation="vertical">
      <TextView
        android:id="@+id/tv_registro"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/registro"
        android:textColor="@color/negro" />
      <Button
        android:id="@+id/btn_registro_apoderado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:padding="@dimen/small"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_people"
        android:text="@string/registra_apoderado"
        android:textColor="@color/blanco" />
      <Button
        android:id="@+id/btn_registro_conductor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_drive_eta"
        android:text="@string/registra_conductor"
        android:textColor="@color/blanco" />
    </LinearLayout>
    <ImageView
      android:id="@+id/img_launcher"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="@dimen/medium"
      android:layout_alignParentBottom="true"
      android:layout_below="@id/layout_registro"
      android:contentDescription="@string/todo"
      android:scaleType="fitCenter"
      app:srcCompat="@drawable/bus_escolar" />
  </RelativeLayout>
</ScrollView>
