<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  tools:context=".ChangePassword">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/azulVerdoso">
    <Button
      android:id="@+id/btnAceptar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/small"
      android:layout_below="@id/caja_new_password"
      android:layout_marginHorizontal="@dimen/medium"
      android:padding="@dimen/small"
      android:background="@drawable/button_background"
      android:drawableStart="@drawable/ic_check"
      android:focusable="true"
      android:onClick="clickCambiarPassword"
      android:text="@string/guardar"
      android:textAlignment="center"
      android:textColor="@color/blanco" />
    <EditText
      android:id="@+id/caja_new_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/small"
      android:layout_below="@id/caja_old_password"
      android:layout_marginHorizontal="@dimen/medium"
      android:padding="@dimen/small"
      android:background="@drawable/button_background_blanco"
      android:hint="@string/nueva_contrase_a"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:textColor="@color/negro"
      android:textSize="@dimen/txt_size" />
    <EditText
      android:id="@+id/caja_old_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/medium"
      android:layout_marginBottom="@dimen/small"
      android:layout_below="@id/toolbar"
      android:layout_marginHorizontal="@dimen/medium"
      android:padding="@dimen/small"
      android:background="@drawable/button_background_blanco"
      android:hint="@string/antigua_contrase_a"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:textColor="@color/negro"
      android:textSize="@dimen/txt_size" />
    <ImageView
      android:id="@+id/img_launcher"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentBottom="true"
      android:layout_below="@id/btnAceptar"
      android:contentDescription="@string/todo"
      android:scaleType="fitCenter"
      app:srcCompat="@drawable/bus_escolar_arcoiris" />
    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:background="@color/colorPrimary"
      android:theme="@style/ThemeOverlay.AppCompat.Dark"
      app:title="@string/app_name"
      app:titleTextColor="#FFF" />
  </RelativeLayout>
</ScrollView>
